@@ -1,11 +1,0 @@
-dnl
-dnl   Copyright (C) 2011 Peter Breitenlohner <tex-live@tug.org>
-dnl
-dnl   This file is free software; the copyright holder
-dnl   gives unlimited permission to copy and/or distribute it,
-dnl   with or without modifications, as long as this notice is preserved.
-dnl
-dnl --------------------------------------------------------
-dnl
-dnl  m4-include this file to define the current dvipdfmx version
-m4_define([dvipdfmx_version], [20120420])
