@@ -1,3 +1,8 @@
+2012-09-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* version.ac (removed): We now maintain dvipdfmx here.
+	* configure.ac: Adapted.
+
 2012-09-21  Karl Berry  <karl@tug.org>
 
 	* many files: remove useless $Header$ from old repo,
